--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name":"alipaysdk/easysdk",
+	"name":"xmtapp/easysdk",
 	"description":"支付宝官方 Alipay Easy SDK",
 	"type":"library",
 	"version":"2.0.1",
